fix: address errorprone issues